--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <header>
       <nav class="navbar">
-        <a href="#"><img src="image/logo.svg" alt="Logo" /></a>
+        <a href="#"><img src="/image/logo.svg" alt="Logo" /></a>
         <ul class="navLink">
           <li><a href="#">Home</a></li>
           <li><a href="#">About</a></li>
