--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <header>
       <nav class="navbar">
-        <a href="#"><img src="/image/logo.svg" alt="Logo" /></a>
+        <a href="#"><img src="./image/logo.svg" alt="Logo" /></a>
         <ul class="navLink">
           <li><a href="#">Home</a></li>
           <li><a href="#">About</a></li>
@@ -26,7 +26,7 @@
         <button>CONTACT ME</button>
       </div>
       <div class="right">
-        <img src="/image/test.jpg" alt="" />
+        <img src="./image/test.jpg" alt="" />
       </div>
     </div>
     <main>
@@ -199,7 +199,7 @@
       </p>
       <div class="card">
         <div>
-          <img class="profile" src="/image/images.jpeg" alt="" />
+          <img class="profile" src="./image/images.jpeg" alt="" />
         </div>
         <div>
           <p class="prag">
